--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -8,7 +8,7 @@ table.ui.celled.table
       th
 
   tbody
-    - @event.participations.each do |participation|
+    - participations.each do |participation|
       tr
         td = participation.user.name
         td = participation.event.name
@@ -16,8 +16,8 @@ table.ui.celled.table
         td = participation.request_for_single_room
         td
           div.ui.mini.buttons
-            = link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
-            div.or
+            /= link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
+            /div.or
             = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
             div.or
             = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
