--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -11,7 +11,7 @@
         tr
           td
             i.ui.large.user.icon
-            = user.name
+            = user.full_name
           td = user.email
           td = user.gender
           td = render 'shared/action_links', object: user
