--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -1,7 +1,7 @@
 img src="http://placehold.it/150x150"
 
 .user-info
-  h2 = @user.name
+  h2 = @user.full_name
 
   p = @user.email
   p Gender: #{@user.gender}
