--- a/app/views/proposals/index.slim
+++ b/app/views/proposals/index.slim
@@ -17,4 +17,4 @@ h1 = t('.header')
           td = proposal.description
           td = proposal.duration
           td = link_to proposal.event.name, event_path(proposal.event)
-          td = link_to proposal.user.name, user_path(proposal.user)
+          td = link_to proposal.user.full_name, user_path(proposal.user)
