--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -11,7 +11,8 @@
         th = Event.human_attribute_name(:starting_at)
         th = Event.human_attribute_name(:ending_at)
         th = t('.registration')
-        th = t('.actions')
+        - if @events.any? { |event| can? :update, event }
+          th = t('.actions')
     tbody
       - @events.each do |event|
         tr
@@ -21,5 +22,5 @@
           td = event.starting_at.strftime("%d/%m/%Y")
           td = event.ending_at.strftime("%d/%m/%Y")
           td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(event)
-          td = render 'shared/action_links', object: event
-
+          - if can? :update, event
+            td = render 'shared/action_links', object: event
