--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -8,7 +8,7 @@ div
         th start date/time
         th end date/time
         th registration
-        - if can? :update, @event
+        - if can? :manage, @event
           th
     tbody
       tr
@@ -17,7 +17,7 @@ div
         td = @event.starting_at.strftime("%d/%m/%Y")
         td = @event.ending_at.strftime("%d/%m/%Y")
         td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(@event)
-        - if can? :update, @event
+        - if can? :manage, @event
           td
             div.ui.mini.buttons
               = link_to "Edit", edit_event_path(@event), class: "ui button primary"
@@ -35,6 +35,7 @@ div
     - unless @event.participants.empty?
       == render 'participations/table', participations: @event.participations
 
-    = link_to "Add participant", new_event_participation_path(@event), class: 'ui button green'
-    = link_to "List deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button green'
+    - if can? :manage, @event
+      = link_to "Add participant", new_event_participation_path(@event), class: 'ui button green'
 
+    = link_to "List deltakere med enkeltrom", single_room_participants_event_participations_path(@event), class: 'ui button green'
