--- a/app/views/layouts/crudable.slim
+++ b/app/views/layouts/crudable.slim
@@ -4,7 +4,7 @@
 
   = yield
 
-  - if can? :create, @resource
+  - if @resource and can? :create, @resource
     = render 'shared/new_link' if action_name == 'index'
 
 = render template: 'layouts/application'
