--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -1,13 +1,11 @@
 table.ui.celled.table
   thead
     tr
-      th name
-      th event name
-      th single room
-      - if can? :manage, @event
-        -# Don't show reason for single room to guests.
-        th reason for single room
-        th
+      th = User.human_attribute_name(:name)
+      th = Participation.human_attribute_name(:name)
+      th = Participation.human_attribute_name(:single_room)
+      th = Participation.human_attribute_name(:request_for_single_room)
+      th
 
   tbody
     - participations.each do |participation|
@@ -15,12 +13,9 @@ table.ui.celled.table
         td = participation.user.full_name
         td = participation.event.name
         td = participation.single_room
-        - if can? :manage, @event
-          td = participation.request_for_single_room
-          td
-            div.ui.mini.buttons
-              /= link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
-              /div.or
-              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
-              div.or
-              = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+        td = participation.request_for_single_room
+        td
+          div.ui.mini.buttons
+            = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
+            div.or
+            = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
