users/_form: first_name & last_name

--- a/app/views/users/_form.slim
+++ b/app/views/users/_form.slim
@@ -1,6 +1,7 @@
 = simple_form_for @user do |u|
 
-  = u.input :name, as: :string
+  = u.input :first_name, as: :string
+  = u.input :last_name, as: :string
   = u.input :email, as: :string
 
   .inline.fields
