--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -14,4 +14,6 @@
             = user.full_name
           td = user.email
           td = user.gender
-          td = render 'shared/action_links', object: user
+          td
+            - if can? :update, user
+              = render 'shared/action_links', object: user
