Updates menu translations

--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -2,11 +2,11 @@
 .ui.secondary.pointing.menu#top-menu class="#{fixed ? 'fixed' : ''}"
   .item = link_to t('.frontpage'), root_path
   - if can? :read, User
-    .item = link_to User.model_name.human.pluralize, users_path
+    .item = link_to User.model_name.human(count: 2), users_path
   - if can? :read, Event
-    .item = link_to Event.model_name.human.pluralize, events_path
+    .item = link_to Event.model_name.human(count: 2), events_path
   - if can? :read, Proposal
-    .item = link_to Proposal.model_name.human.pluralize, proposals_path
+    .item = link_to Proposal.model_name.human(count: 2), proposals_path
   - if can? :read, Accommodation
     .item = link_to Accommodation.model_name.human(count: 2), accommodations_path
   - if can? :read, Hotel
