--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,3 +1,13 @@
+- content_for :auxiliary_menu do
+  - if can? :read, Accommodation
+    .item = link_to Accommodation.model_name.human(count: 2), accommodations_path
+  - if can? :read, Proposal
+    .item = link_to Proposal.model_name.human(count: 2), proposals_path
+  - if can? :read, Schedule
+    .item = link_to Schedule.model_name.human.pluralize, schedules_path(@event)
+  - if can? :read, Hotel
+    .item = link_to Hotel.model_name.human(count: 2), hotels_path
+
 div
   table.ui.celled.table
     thead
