--- a/app/views/layouts/_menu.slim
+++ b/app/views/layouts/_menu.slim
@@ -1,16 +1,9 @@
-- puts current_user.inspect
-.ui.secondary.pointing.menu#top-menu class="#{fixed ? 'fixed' : ''}"
+.ui.secondary.pointing.menu#top-menu
   .item = link_to t('.frontpage'), root_path
-  - if can? :read, User
-    .item = link_to User.model_name.human(count: 2), users_path
   - if can? :read, Event
     .item = link_to Event.model_name.human(count: 2), events_path
-  - if can? :read, Proposal
-    .item = link_to Proposal.model_name.human(count: 2), proposals_path
-  - if can? :read, Accommodation
-    .item = link_to Accommodation.model_name.human(count: 2), accommodations_path
-  - if can? :read, Hotel
-    .item = link_to Hotel.model_name.human(count: 2), hotels_path
+  - if can? :read, User
+    .item = link_to User.model_name.human(count: 2), users_path
   - if current_user
     .item.right = link_to t('user.signout'), signout_path, method: :delete
 
