Further work on nested resources controllers for events

--- a/app/views/layouts/crudable.slim
+++ b/app/views/layouts/crudable.slim
@@ -4,7 +4,7 @@
 
   = yield
 
-  - if @resource and can? :create, @resource
+  - if @crudable_name and can? :create, @crudable_name
     = render 'shared/new_link' if action_name == 'index'
 
 = render template: 'layouts/application'
