More changes related to nested resources

--- a/app/views/accommodations/index.slim
+++ b/app/views/accommodations/index.slim
@@ -1,15 +1,2 @@
-
-
 - unless @accommodations.empty?
-  table.ui.celled.table
-    thead
-      tr
-        th = Accommodation.human_attribute_name(:event)
-        th = Accommodation.human_attribute_name(:number_of_beds)
-        th = t('.actions')
-    tbody
-      - @accommodations.each do |accommodation|
-        tr
-          td = accommodation.event.try(:name)
-          td = accommodation.number_of_beds
-          td = render 'shared/action_links', object: accommodation
+  = render 'table'
