--- a/app/views/proposals/_form.slim
+++ b/app/views/proposals/_form.slim
@@ -1,8 +1,6 @@
-= render 'shared/crud_title'
-
-= simple_form_for [@event, @proposal] do |f|
+= simple_form_for [@parent, @proposal] do |f|
   = f.input :title, as: :string
   = f.input :description
   = f.input :duration, collection: Proposal::DURATIONS, prompt: "Select duration", selected: @proposal.duration
-  = f.input :user_id, collection: User.all, prompt: "Select an user"
+  = f.input :user_id, collection: User.all, prompt: "Select a user", label_method: :full_name
   = f.button :submit
