--- a/app/views/shared/image_upload/_upload_fields.slim
+++ b/app/views/shared/image_upload/_upload_fields.slim
@@ -4,7 +4,13 @@
     tbody#images
       - images.each do |image|
         = render 'shared/image_upload/image_row', image: image
-  = simple_form_for [owner, Image.new], remote: true, html: { class: 'form-horizontal fileupload image-upload-form', multipart: true } do |a|
-    .images-upload
-    = image_file_field(a)
-    = a.label t('.add'), class: 'file ui primary button', for: 'image_files'
+  - if @parent
+    = simple_form_for [@parent, owner, Image.new], remote: true, html: { class: 'form-horizontal fileupload image-upload-form', multipart: true } do |a|
+      .images-upload
+      = image_file_field(a)
+      = a.label t('.add'), class: 'file ui primary button', for: 'image_files'
+  - else
+    = simple_form_for [owner, Image.new], remote: true, html: { class: 'form-horizontal fileupload image-upload-form', multipart: true } do |a|
+      .images-upload
+      = image_file_field(a)
+      = a.label t('.add'), class: 'file ui primary button', for: 'image_files'
