Updates events views, login view

--- a/app/views/events/_venue_fields.slim
+++ b/app/views/events/_venue_fields.slim
@@ -1,3 +1,3 @@
 .inline.fields.nested-fields
-  = f.input :name
-  = link_to_remove_association "<i class='minus icon' ></i> Remove".html_safe, f, class: 'ui red mini button'
+  = f.input :name, label: false
+  = link_to_remove_association "<i class='minus icon' ></i> Remove".html_safe, f, class: 'ui red icon mini button'
