--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,12 +1,4 @@
-- content_for :auxiliary_menu do
-  - if can? :read, Accommodation
-    .item = link_to Accommodation.model_name.human(count: 2), event_accommodations_path(@event)
-  - if can? :read, Proposal
-    .item = link_to Proposal.model_name.human(count: 2), event_proposals_path(@event)
-  - if can? :read, Schedule
-    .item = link_to Schedule.model_name.human(count: 2), event_schedules_path(@event)
-  - if can? :read, Hotel
-    .item = link_to Hotel.model_name.human(count: 2), event_hotels_path(@event)
+= render 'events/menu', event: @event
 
 div
   table.ui.celled.table
