Changes related to partifications, users

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -3,3 +3,35 @@ $knowit-purple: #8e7fae;
 $knowit-light-green: #a0d1ca;
 $black: #000000;
 $white: #FFFFFF;
+
+$knowit-black-color: rgb(45, 41, 38);
+
+$knowit-primary-green-color: rgb(0, 89, 79);
+$knowit-primary-green-color-light: rgb(0, 150, 130);
+$knowit-primary-green-color-lighter: rgb(160, 209, 202);
+$knowit-primary-green-color-lightest: rgb(201, 226, 224);
+
+$knowit-primary-purple-color: rgb(97, 75, 121);
+$knowit-primary-purple-color-light: rgb(142, 127, 174);
+$knowit-primary-purple-color-lighter: rgb(182, 184, 220);
+$knowit-primary-purple-color-lightest: rgb(222, 225, 236);
+
+$knowit-complementary-blue-color: rgb(40, 51, 74);
+$knowit-complementary-blue-color-light: rgb(87, 114, 139);
+$knowit-complementary-blue-color-lighter: rgb(158, 181, 203);
+$knowit-complementary-blue-color-lightest: rgb(214, 225, 236);
+
+$knowit-complementary-yellow-color: rgb(207, 176, 35);
+$knowit-complementary-yellow-color-light: rgb(249, 226, 103);
+$knowit-complementary-yellow-color-lighter: rgb(242, 240, 161);
+$knowit-complementary-yellow-color-lightest: rgb(238, 238, 200);
+
+$knowit-complementary-red-color: rgb(194, 110, 96);
+$knowit-complementary-red-color-light: rgb(234, 167, 148);
+$knowit-complementary-red-color-lighter: rgb(236, 195, 178);
+$knowit-complementary-red-color-lightest: rgb(243, 233, 226);
+
+$knowit-complementary-gray-color: rgb(117, 120, 123);
+$knowit-complementary-gray-color-light: rgb(177, 179, 179);
+$knowit-complementary-gray-color-lighter: rgb(208, 208, 206);
+$knowit-complementary-gray-color-lightest: rgb(228, 226, 219);
