--- a/app/views/participations/_form.html.slim
+++ b/app/views/participations/_form.html.slim
@@ -1,8 +1,20 @@
 = render 'shared/crud_title'
 
 = simple_form_for [@event, @participation]  do |u|
-  .inline.fields
+
+  = u.simple_fields_for @participation.user do |p|
+    .three.fields
+      = p.input :passport_name
+      = p.input :passport_number
+      = p.input :passport_nationality
+    .two.fields
+      = p.input :passport_issued_at, as: :string
+      = p.input :passport_expires_at, as: :string
+
+  .two.fields
     = u.input :single_room, as: :radio_buttons
-  = u.input :request_for_single_room
-  = u.association :user, label_method: lambda{|u| u.full_name}
+    = u.input :request_for_single_room, as: :string
+
+  / = u.association :user, label_method: lambda { |u| u.full_name }
+
   = u.button :submit
