--- a/app/views/participations/edit.html.slim
+++ b/app/views/participations/edit.html.slim
@@ -1,4 +1,6 @@
-== render 'form'
+= render 'shared/crud_title'
+
+= render 'form', event: @event, participation: @participation
 
 = link_to 'Show', event_participation_path(@event, @participation)
 '|
