--- a/app/views/after_signup/add_participation.slim
+++ b/app/views/after_signup/add_participation.slim
@@ -1,11 +1,6 @@
-.ui.ordered.steps
-  - wizard_steps.each do |step|
-    .step
-      .content
-        .title
-          = link_to step, wizard_path(step)
+= render 'steps'
 
 .ui.segment
   h1 Add participation
   = simple_form_for @participation, url: wizard_path, method: :put do |f|
-    = render 'participations/form', participation: @participation, event: @participation.event
+    = render 'participations/fields', f: f, participation: @participation
