--- a/app/views/after_signup/complete_profile.slim
+++ b/app/views/after_signup/complete_profile.slim
@@ -1,11 +1,5 @@
-.ui.ordered.steps
-  - wizard_steps.each do |step|
-    .step
-      .content
-        .title
-          = link_to step, wizard_path(step)
-
+= render 'steps'
 .ui.segment
   h1 Complete your profile
   = simple_form_for @user, url: wizard_path, method: :put do |f|
-    = render 'users/form', user: @user
+    = render 'users/fields', f: f, user: @user
