Fikset seeding + at vanlige deltakere kan se events + lage participations

--- a/app/views/participations/new.html.slim
+++ b/app/views/participations/new.html.slim
@@ -1,4 +1,4 @@
 .ui.segment
-  == render 'form'
+  == render 'form', event: @event, participation: @participation
 
 = link_to 'Back', events_path(@event)
