--- a/app/views/after_signup/add_participation.slim
+++ b/app/views/after_signup/add_participation.slim
@@ -1,6 +1,6 @@
 = render 'steps'
 
 .ui.segment
-  h1 Add participation
   = simple_form_for @participation, url: wizard_path, method: :put do |f|
     = render 'participations/fields', f: f, participation: @participation
+    = f.submit class: 'ui primary button'
