fix reference to out of scope variables that now should be instance variables.

--- a/app/views/participations/_form.slim
+++ b/app/views/participations/_form.slim
@@ -1,3 +1,3 @@
-= simple_form_for [event, participation]  do |f|
+= simple_form_for [@event, @participation]  do |f|
   = render 'fields', f: f
   = f.button :submit
