--- a/app/views/after_signup/complete_profile.slim
+++ b/app/views/after_signup/complete_profile.slim
@@ -1,5 +1,7 @@
 = render 'steps'
+
 .ui.segment
   h1 Complete your profile
   = simple_form_for @user, url: wizard_path, method: :put do |f|
     = render 'users/fields', f: f, user: @user
+    = f.submit 'Next', class: 'ui primary button'
