--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -34,13 +34,13 @@ h2 {
   .item:first-child {
     margin-left: 10%;
   }
-  .item:hover {
+  a.item:hover {
     background-color: $knowit-green;
   }
-  .item:hover a {
+  a.item:hover {
     color: white;
   }
-  .item a {
+  a.item {
     color: $knowit-green;
   }
 }
@@ -61,10 +61,10 @@ h2 {
   .item:hover {
     background-color: $knowit-green;
   }
-  .item:hover a {
+  a.item:hover {
     color: white;
   }
-  .item a {
+  a.item {
     color: white;
   }
 }
