--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -15,7 +15,7 @@ div
       tr
         td = @event.name
         td = @event.description
-        td = @event.venues.size
+        td = @event.hotels.size
         td = @event.starting_at.strftime("%d/%m/%Y")
         td = @event.ending_at.strftime("%d/%m/%Y")
         td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(@event)
