--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -15,7 +15,8 @@ table.ui.celled.table
         td = participation.single_room
         td = participation.request_for_single_room
         td
-          div.ui.mini.buttons
-            = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
-            div.or
-            = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+          - if can? :manage, participation
+            div.ui.mini.buttons
+              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
+              div.or
+              = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
