Action links and add participation disappears if the choice is not valid

--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -9,16 +9,18 @@ div
         th = Venue.model_name.human.pluralize
         th = Event.human_attribute_name(:starting_at)
         th = Event.human_attribute_name(:ending_at)
-        th
-        th
-    tbody
+        th = t('.registration')
+        - if can? :manage, Event
+          th = t('.actions')
       tr
         td = @event.name
         td = @event.description
         td = @event.hotels.size
         td = @event.starting_at.strftime("%d/%m/%Y")
         td = @event.ending_at.strftime("%d/%m/%Y")
-        td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(@event)
+        td
+          - unless @event.user_already_signed_up? current_user
+            = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(@event)
         - if can? :manage, @event
           td
             div.ui.mini.buttons
