--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -16,9 +16,11 @@
         tr
           td = link_to event.name, event_path(event)
           td = event.description
-          td = event.venues.size
+          td = event.hotels.size
           td = event.starting_at.strftime("%d/%m/%Y")
           td = event.ending_at.strftime("%d/%m/%Y")
-          td = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(event)
+          td
+            - unless event.user_already_signed_up? current_user
+              = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(event)
           - if can? :manage, event
             td = render 'shared/action_links', object: event
