--- a/app/views/participations/_table.slim
+++ b/app/views/participations/_table.slim
@@ -5,7 +5,7 @@ table.ui.celled.table
       th = Participation.human_attribute_name(:name)
       th = Participation.human_attribute_name(:single_room)
       th = Participation.human_attribute_name(:request_for_single_room)
-      th
+      th = t('.actions')
 
   tbody
     - participations.each do |participation|
@@ -15,7 +15,8 @@ table.ui.celled.table
         td = participation.single_room
         td = participation.request_for_single_room
         td
-          div.ui.mini.buttons
-            = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
-            div.or
-            = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+          - if can? :update, participation
+            div.ui.mini.buttons
+              = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
+              div.or
+              = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
