--- a/app/views/participations/index.html.slim
+++ b/app/views/participations/index.html.slim
@@ -1,26 +1,5 @@
 h1 Listing participations
 
 = link_to 'New Participation', new_event_participation_path(@event)
-table.ui.celled.table
-  thead
-    tr
-      th = User.human_attribute_name(:name)
-      th = Event.human_attribute_name(:name)
-      th Single room?
-      th Reason for singe room?
-      th
 
-  tbody
-    - @participations.each do |participation|
-      tr
-        td = participation.user.full_name
-        td = participation.event.name
-        td = participation.single_room
-        td = participation.request_for_single_room
-        td
-          div.ui.mini.buttons
-            = link_to 'Show', event_participation_path(@event, participation), class: "ui button primary"
-            div.or
-            = link_to 'Edit', edit_event_participation_path(@event, participation), class: "ui button"
-            div.or
-            = link_to 'Delete', event_participation_path(@event, participation), data: { confirm: 'Are you sure?' }, method: :delete, class: "ui button negative"
+= render 'participations/table', participation: @participation
