--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2,8 +2,8 @@
 @import "mixins";
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Raleway', sans-serif;
   font-weight: 400;
+  font-family: 'Sarpanch';
 }
 
 h2 {
