--- a/app/views/layouts/pages.html.slim
+++ b/app/views/layouts/pages.html.slim
@@ -10,4 +10,5 @@ html
     - if !@frontpage
       = render 'layouts/menu', fixed: true
     = yield
-    = render 'layouts/footer'
+    - if !@frontpage
+      = render 'layouts/footer'
