--- a/app/views/participations/edit.html.slim
+++ b/app/views/participations/edit.html.slim
@@ -1,7 +1,2 @@
-= render 'shared/crud_title'
-
-= render 'form', event: @event, participation: @participation
-
-= link_to 'Show', event_participation_path(@event, @participation)
-
-= link_to 'Back', event_participations_path(@event)
+.ui.segment
+  = render 'form', event: @event, participation: @participation
