--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -1,26 +1,2 @@
-
-- unless @events.empty?
-  table.ui.celled.table
-    thead
-      tr
-        th = Event.human_attribute_name(:name)
-        th = Event.human_attribute_name(:description)
-        th = Venue.model_name.human.pluralize
-        th = Event.human_attribute_name(:starting_at)
-        th = Event.human_attribute_name(:ending_at)
-        th = t('.registration')
-        - if can? :manage, Event
-          th = t('.actions')
-    tbody
-      - @events.each do |event|
-        tr
-          td = link_to event.name, event_path(event)
-          td = event.description
-          td = event.hotels.size
-          td = event.starting_at.strftime("%d/%m/%Y")
-          td = event.ending_at.strftime("%d/%m/%Y")
-          td
-            - unless event.user_already_signed_up? current_user
-              = link_to fa_icon('check-circle-o 2x'), new_event_participation_path(event)
-          - if can? :manage, event
-            td = render 'shared/action_links', object: event
+.ui.segment
+  = render 'table', events: @events
