--- a/app/views/pages/front.slim
+++ b/app/views/pages/front.slim
@@ -1,9 +1,26 @@
-#frontpage
-  section.ui.secondary.segment.signup
-    h1 = link_to @current_event.name, event_path(@current_event)
-    h3 = "#{@current_event.starting_at.strftime("%d. %b")}-#{@current_event.ending_at.strftime("%d. %b")}"
-    p = @current_event.description
+section.frontpage-image-background#mallorca
+  div.intro-elements
+    h1
+      | CONFERENCE
+      br
+      | COMMANDER
     - unless current_user
-      = link_to "Meld deg på #{@current_event.name}", signin_path, class: "ui button knowit-green"
-    - else
-      = link_to "Meld deg på #{@current_event.name}", after_signup_path(:complete_profile), class: "ui button knowit-green"
+      = link_to "Logg inn", signin_path, class: "ui button knowit-purple"
+
+    button.ui.button.knowit-green#show-conferences Vis konferanser
+
+section#frontpage-info
+  .ui.items
+    .item
+      .ui.large.image
+        img src="/assets/kds.png"
+      .middle.aligned.content
+        .header
+          h1 CONFERENCE COMMANDER
+          p På denne siden har alle ansatte i Knowit mulighet til å melde seg på konferanser arrangert av Objectnet. Disse turene kan variere mellom Fredrikstad til Berlin.
+
+section.frontpage-image-background#berlin
+section#frontpage-events
+  h1 Alle arrangementer
+  = render 'events/table', events: Event.all
+section.frontpage-image-background#lofoten
