--- a/app/views/shared/_crud_title.slim
+++ b/app/views/shared/_crud_title.slim
@@ -1,1 +1,9 @@
-h1 = "#{action_name.capitalize} #{controller_name.classify.constantize.model_name.human.downcase}"
+h1
+  - model_name = controller_name.classify.constantize.model_name
+  - case action_name.to_sym
+  - when :index
+    = t("helpers.actions.#{action_name.downcase}", model: model_name.human(count: 2).downcase)
+  - when :show
+    = t("helpers.actions.#{action_name.downcase}", model: model_name, record: @crudable)
+  - else
+    = t("helpers.actions.#{action_name.downcase}", model: model_name.human.downcase)
