--- a/app/views/pages/front.slim
+++ b/app/views/pages/front.slim
@@ -5,9 +5,9 @@ section.frontpage-image-background#mallorca
       br
       | COMMANDER
     - unless current_user
-      = link_to "Logg inn", signin_path, class: "ui button knowit-purple"
+      = link_to "Logg inn", signin_path, class: "ui huge button knowit-purple"
 
-    button.ui.button.knowit-green#show-conferences Vis konferanser
+    a.ui.huge.button.knowit-green#show-conferences Vis konferanser
 
 section#frontpage-info
   .ui.items
