Updates to Rails 5.1, removes bower, adds yarn, webpacker

--- a/app/views/after_signup/add_participation.slim
+++ b/app/views/after_signup/add_participation.slim
@@ -8,5 +8,4 @@
   .ui.divider
   = simple_form_for @participation, url: wizard_path, method: :put do |f|
     = render 'participations/fields', f: f, participation: @participation
-    .ui.divider
-    = f.submit 'Finish', class: 'ui primary button'
+    = f.submit 'Finish', class: 'ui large knowit-purple button'
