--- a/app/views/after_signup/complete_profile.slim
+++ b/app/views/after_signup/complete_profile.slim
@@ -6,4 +6,4 @@
   = simple_form_for @user, url: wizard_path, method: :put do |f|
     = render 'users/fields', f: f, user: @user
     .ui.divider
-    = f.submit 'Next', class: 'ui primary button'
+    = f.submit 'Next', class: 'ui large knowit-purple button'
